# cpp-solutions

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: Testing.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt  RGBToHex.cpp  RGBToHex.h  SumFct.cpp  SumFct.h  codewars.cpp  codewars.h  countBits.cpp  countBits.h  scramble.cpp  scramble.h  to_camel_case.cpp  to_camel_case.h
test/: CMakeLists.txt  RGBToHexTest.cpp  SumFctTest.cpp  codewarsTest.cpp  countBitsTest.cpp  scrambleTest.cpp  to_camel_caseTest.cpp
